Orientation for phone adjustments

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <title>React App</title>
     <style>
-      html, body { font-family: 'Roboto', sans-serif; overflow: hidden; }
+      html, body { font-family: 'Roboto', sans-serif; overflow-x: hidden; }
     </style>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap" rel="stylesheet">
   </head>
